@@ -194,6 +194,7 @@ void ERR_load_FIPS_strings(void);
 #define FIPS_F_FIPS_CIPHERINIT				 128
 #define FIPS_F_FIPS_DIGESTINIT				 127
 #define FIPS_F_FIPS_DRBG_GENERATE			 132
+#define FIPS_F_FIPS_DRBG_HEALTH_CHECK			 137
 #define FIPS_F_FIPS_DRBG_INIT				 136
 #define FIPS_F_FIPS_DRBG_INSTANTIATE			 133
 #define FIPS_F_FIPS_DRBG_NEW				 134
@@ -224,6 +225,8 @@ void ERR_load_FIPS_strings(void);
 #define FIPS_R_CANNOT_READ_EXE				 103
 #define FIPS_R_CANNOT_READ_EXE_DIGEST			 104
 #define FIPS_R_CONTRADICTING_EVIDENCE			 114
+#define FIPS_R_ENTROPY_ERROR_UNDETECTED			 133
+#define FIPS_R_ENTROPY_NOT_REQUESTED_FOR_RESEED		 134
 #define FIPS_R_ERROR_INITIALISING_DRBG			 120
 #define FIPS_R_ERROR_INSTANTIATING_DRBG			 121
 #define FIPS_R_ERROR_RETRIEVING_ENTROPY			 122
@@ -234,7 +237,9 @@ void ERR_load_FIPS_strings(void);
 #define FIPS_R_FINGERPRINT_DOES_NOT_MATCH_SEGMENT_ALIASING 112
 #define FIPS_R_FIPS_MODE_ALREADY_SET			 102
 #define FIPS_R_FIPS_SELFTEST_FAILED			 106
+#define FIPS_R_FUNCTION_ERROR				 135
 #define FIPS_R_GENERATE_ERROR				 124
+#define FIPS_R_GENERATE_ERROR_UNDETECTED		 136
 #define FIPS_R_INSTANTIATE_ERROR			 125
 #define FIPS_R_INSUFFICIENT_SECURITY_STRENGTH		 132
 #define FIPS_R_INVALID_KEY_LENGTH			 109
@@ -243,13 +248,18 @@ void ERR_load_FIPS_strings(void);
 #define FIPS_R_NON_FIPS_METHOD				 100
 #define FIPS_R_NOT_INSTANTIATED				 127
 #define FIPS_R_PAIRWISE_TEST_FAILED			 107
+#define FIPS_R_PERSONALISATION_ERROR_UNDETECTED		 137
 #define FIPS_R_PERSONALISATION_STRING_TOO_LONG		 128
+#define FIPS_R_REQUEST_LENGTH_ERROR_UNDETECTED		 138
 #define FIPS_R_REQUEST_TOO_LARGE_FOR_DRBG		 129
+#define FIPS_R_RESEED_COUNTER_ERROR			 139
 #define FIPS_R_RESEED_ERROR				 130
 #define FIPS_R_RSA_DECRYPT_ERROR			 115
 #define FIPS_R_RSA_ENCRYPT_ERROR			 116
 #define FIPS_R_SELFTEST_FAILED				 101
+#define FIPS_R_STRENGTH_ERROR_UNDETECTED		 140
 #define FIPS_R_TEST_FAILURE				 117
+#define FIPS_R_UNINSTANTIATE_ZEROISE_ERROR		 141
 #define FIPS_R_UNSUPPORTED_DRBG_TYPE			 131
 #define FIPS_R_UNSUPPORTED_PLATFORM			 113
 
